# zpl

./: .envrc  .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml
server/: Cargo.toml  server.json
server/src/: app.rs  config.rs  configuration.rs  data_uri.rs  index.html  job.rs  main.rs  physical_printer.rs  spa.rs  style.css
server/template/: label.typ
src/: command.rs  device.rs  driver.rs  image.rs  label.rs  lib.rs  main.rs  read.rs  svg.rs
src/device/: mod.rs  read.rs
src/util/: crc.rs  image.rs  mod.rs  svg.rs
typst/: Cargo.toml
typst/examples/: label.typ  simple.rs  simple.typ  template.rs  template.typ
typst/src/: lib.rs
