[package]
name = "zpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
image = "0.25.1"
itertools = "0.13.0"
tokio = { version = "1.37.0", features = ["full"] }
