[package]
name = "zpl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "server"
path = "src/main.rs"
