[package]
name = "zpl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7.5"
base64 = "0.22"
image = "0.25"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zpl = { path = ".." }
clap =  { version = "4.5.16", features = ["env"] }
env_logger = "0.11.5"
log = "0.4.22"

[[bin]]
name = "zpl-server"
path = "src/main.rs"
